--- a/mamba/benchmarks/benchmark_generation_mamba_simple.ipynb
+++ b/mamba/benchmarks/benchmark_generation_mamba_simple.ipynb
@@ -19,8 +19,7 @@
     "\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "\n",
-    "from mamba_ssm.models.mixer_seq_simple import MambaLMHeadModel\n",
-    "\n"
+    "from mamba_ssm.models.mixer_seq_simple import MambaLMHeadModel"
    ]
   },
   {
@@ -29,7 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "parser = argparse.ArgumentParser(description=\"Generation benchmarking\")\n",
     "parser.add_argument(\"--model-name\", type=str, default=\"state-spaces/mamba-130m\")\n",
     "parser.add_argument(\"--prompt\", type=str, default=None)\n",
@@ -39,7 +37,12 @@
     "parser.add_argument(\"--topk\", type=int, default=1)\n",
     "parser.add_argument(\"--topp\", type=float, default=1.0)\n",
     "parser.add_argument(\"--batch\", type=int, default=1)\n",
-    "args = parser.parse_args()"
+    "\n",
+    "## original\n",
+    "# args = parser.parse_args() \n",
+    "\n",
+    "# for colab run\n",
+    "args = vars(parser.parse_args())"
    ]
   },
   {
@@ -48,7 +51,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "repeats = 3\n",
     "device = \"cuda\"\n",
     "dtype = torch.float16"
@@ -60,8 +62,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "print(f\"Loading model {args.model_name}\")\n",
     "is_mamba = args.model_name.startswith(\"state-spaces/mamba-\") or \"mamba\" in args.model_name\n",
     "\n",
